<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addCourse"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/calendarView"
        android:orderInCategory="100"
        android:showAsAction="always"

        android:title="@string/calender"
        />
    <item
        android:id="@+id/databs"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/databs"
        />
    <item
        android:id="@+id/main_screenshot"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/shot" />
    <item
        android:id="@+id/test_quit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/quit"
        />

</menu>